--- a/admin/view/stylesheet/order_volusion.css
+++ b/admin/view/stylesheet/order_volusion.css
@@ -4993,9 +4993,9 @@ textarea[name="pay_note"]{
     font-size: 12px;
     color: #000000;
 }
-#order_payment tr td[align="center"] a{
-    background-position: -312px 0;
-    background-image: url("../../../admin/view/image/glyphicons-halflings.png");
+#order_payment tr td a.remove_payment_record{
+    background-position: -203px 0;
+    background-image: url(../image/v13-sprite.png);
     width: 14px;
     height: 14px;
     line-height: 14px;
